Bug 421915 - Can't reposition the currency symbol
Summary: Can't reposition the currency symbol
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.8
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-05-22 13:39 UTC by Joe
Modified: 2020-08-28 12:55 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joe 2020-05-22 13:39:01 UTC
SUMMARY
The system only displays the currency symbols after the amount. The usual in my country is to have it before ($123.45 - correct, 123.45$ - incorrect)

STEPS TO REPRODUCE
1. Create any new file in kmymoney
2. Create any new account in any new currency
3. 

OBSERVED RESULT
The currency symbol is behind the amount. There is no way to update or change that behavior

EXPECTED RESULT
Being able to reposition the currency symbol according to user location, region, etc.

SOFTWARE/OS VERSIONS
Windows: 10
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
I am seeing a lot of issues with kmymoney 5.x in windows 10. Version 4 works as intended. Maybe I am missing some files for the Windows packaged version?
Comment 1 Thomas Baumgart 2020-08-28 11:14:52 UTC
Git commit 7c3d78a5e3a356a80309b5673cd746ddabc37f56 by Thomas Baumgart.
Committed on 28/08/2020 at 11:13.
Pushed by tbaumgart into branch 'master'.

Provide mechanism to pick monetary format from locale info

The display of monetary values varies in different locales but only
parts of the parameters were interpreted by the KMyMoney formatting
function.

This change extracts all necessary information from the current locale
and formats the values accordingly. It is only available on GNU Linux
systems. Windows and MacOS have still to be modified to provide the
necessary information.

Additional unit tests are provided to make sure the formatting works as
expected.

M  +36   -5    kmymoney/main.cpp
M  +5    -5    kmymoney/mymoney/mymoneyenums.h
M  +30   -19   kmymoney/mymoney/mymoneymoney.cpp
M  +7    -4    kmymoney/mymoney/mymoneymoney.h
M  +94   -48   kmymoney/mymoney/tests/mymoneymoney-test.cpp
M  +1    -1    kmymoney/plugins/gnc/import/mymoneygncreader.cpp
M  +2    -2    kmymoney/plugins/qif/config/mymoneyqifprofile.cpp

https://invent.kde.org/office/kmymoney/commit/7c3d78a5e3a356a80309b5673cd746ddabc37f56
Comment 2 Thomas Baumgart 2020-08-28 11:28:54 UTC
Git commit 89a462ce4d97caa20263e759373993049c6b8a72 by Thomas Baumgart.
Committed on 28/08/2020 at 11:28.
Pushed by tbaumgart into branch '5.1'.

Provide mechanism to pick monetary format from locale info

The display of monetary values varies in different locales but only
parts of the parameters were interpreted by the KMyMoney formatting
function.

This change extracts all necessary information from the current locale
and formats the values accordingly. It is only available on GNU Linux
systems. Windows and MacOS have still to be modified to provide the
necessary information.

Additional unit tests are provided to make sure the formatting works as
expected.
(cherry picked from commit 7c3d78a5e3a356a80309b5673cd746ddabc37f56)

M  +36   -5    kmymoney/main.cpp
M  +5    -5    kmymoney/mymoney/mymoneyenums.h
M  +30   -19   kmymoney/mymoney/mymoneymoney.cpp
M  +7    -4    kmymoney/mymoney/mymoneymoney.h
M  +94   -48   kmymoney/mymoney/tests/mymoneymoney-test.cpp
M  +1    -1    kmymoney/plugins/gnc/import/mymoneygncreader.cpp
M  +2    -2    kmymoney/plugins/qif/config/mymoneyqifprofile.cpp

https://invent.kde.org/office/kmymoney/commit/89a462ce4d97caa20263e759373993049c6b8a72
Comment 3 Thomas Baumgart 2020-08-28 12:04:16 UTC
Git commit 6c283629a81816c2d9950b8ddf1c46c647b595b3 by Thomas Baumgart.
Committed on 28/08/2020 at 12:03.
Pushed by tbaumgart into branch 'master'.

Amend last commit for the Windows environment

This change adds the necessary code for the Windows environment to
support extraction of the value format from the locale information.

M  +19   -4    kmymoney/misc/platformtools_nognu.cpp

https://invent.kde.org/office/kmymoney/commit/6c283629a81816c2d9950b8ddf1c46c647b595b3
Comment 4 Thomas Baumgart 2020-08-28 12:55:27 UTC
Git commit d60b0fa1e968da321e580493e59421f243f2e2cd by Thomas Baumgart.
Committed on 28/08/2020 at 12:45.
Pushed by tbaumgart into branch '5.1'.

Amend last commit for the Windows environment

This change adds the necessary code for the Windows environment to
support extraction of the value format from the locale information.
FIXED-IN: 5.1.1

(cherry picked from commit 6c283629a81816c2d9950b8ddf1c46c647b595b3)

M  +19   -4    kmymoney/misc/platformtools_nognu.cpp

https://invent.kde.org/office/kmymoney/commit/d60b0fa1e968da321e580493e59421f243f2e2cd