Amend last commit for the Windows environment

This change adds the necessary code for the Windows environment to
support extraction of the value format from the locale information.

BUG: 421915
FIXED-IN: 5.1.1

(cherry picked from commit 6c283629a81816c2d9950b8ddf1c46c647b595b3)